# Soschu_Temp

./: .gitignore  Makefile  README.md  TIMEZONE_IMPLEMENTATION.md  pyproject.toml  pytest.ini  run_tests.py  solar_example_export.csv
.github/workflows/: ci-cd.yml
docs/: computation_setting_component.md  output_generator_architecture.md  preview_workflow.md  solar_implementation_summary.md  solar_module.md  trigger_button_component.md
examples/: core_processing_exemple.py  mez_handling_example.py  modular_architecture_demo.py  preview_service_usage.py  solar_usage_example.py
src/: __init__.py  config.py  constants.py  core.py  core_logic.py  file_generation_service.py  main.py  output_generator.py  parser.py  preview.py  preview_service.py  services.py  simple_main.py  solar.py  test_simple.py  theme.py  weather.py
src/gui/: components.py  services.py
src/gui/components/: computation_setting.py  file_selector.py  preview_window.py  trigger_button.py
tests/: README.md  conftest.py  test_core.py  test_dst.py  test_integration.py  test_mez_timezone.py  test_output_file_comparison.py  test_parser.py  test_performance.py  test_preview.py  test_solar.py  test_solar_integration.py  test_sync_logic.py  test_timezone.py  test_weather.py  test_weather_analyzer.py  test_weather_models.py  test_weather_parser.py
tests/data/: Solare Einstrahlung auf die Fassade.html  solar_sample.html  solar_test_small.html
tools/: README_WIN_BUILD.md  __init__.py  build_exe.py  build_local.py  build_native.py  icon.py
