[tool.poetry]
name = "soschu-temp"
version = "0.1.0"
description = ""
authors = ["Laurent Bihin <laurent.bihin@gmail.com>"]
license = "AGPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
