[project]
name = "soschu-temp"
version = "0.2.0"
description = "Outil d'ajustement des températures dans des fichiers météo basé sur l'irradiation solaire"
authors = [{ name = "Laurent Bihin", email = "laurent.bihin@gmail.com" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "lxml>=5.3.0",
    "pytz>=2024.1",
]

[project.scripts]
build-exe = "tools.build_exe:main"
build-native = "tools.build_native:main"
build-local = "tools.build_local:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pillow>=11.2.1",
    "pyinstaller>=6.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "tools"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "TC",     # flake8-type-checking
    "PL",     # pylint
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "PLR0912",  # too many branches (UI code)
    "PLR0915",  # too many statements (UI code)
    "RET504",   # unnecessary assignment before return
    "RUF001",   # ambiguous unicode (intentional UI characters)
    "RUF003",   # ambiguous unicode in comments
    "PLC0415",  # import not at top level (needed for PyInstaller)
    "PLR0911",  # too many return statements
    "PLW2901",  # for loop variable overwritten
    "TC001",   # move import into type-checking block (breaks dataclasses)
    "TC003",   # move stdlib import into type-checking block
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
